Footer - dynamically anchors to bottom of viewport if main page height does not fully occupy remaining viewport space; lift listing filter state so navbar has access; clicking logo will set filter to null rather than force page reload to eliminate need for distance calculation; bugfix prevent review subcategory rating overlapping date modal on listings show page due to position relative conflict

--- a/frontend/src/components/Listings/ListingsShowPage.css
+++ b/frontend/src/components/Listings/ListingsShowPage.css
@@ -712,6 +712,10 @@
 	padding-right: 8px;
 }
 
+.num-guests-selector:focus {
+	outline: none;
+}
+
 .num-guests-placeholder {
 	position: absolute;
 	font-size: 10px;
